# shadowsocks-asio

./: .clang-format  .gitignore  .gitmodules  AEAD.cpp  AEAD.h  AsyncObject.h  CMakeLists.txt  ChaCha20Poly1305.h  Connection.cpp  Connection.h  EncryptedConnection.cpp  EncryptedConnection.h  README.md  SOCKS5.h  Server.cpp  Server.h  conanfile.txt  io.cpp  io.h  logger.h  main.cpp  socks5.cpp  socks5.h  tcp.cpp  tcp.h  type.h
.github/workflows/: ci.yml
acl/: chn.acl  server_block_local.acl
crypto/: AEAD.cpp  AEAD.h  CMakeLists.txt  ChaCha20Poly1305.h  GCM.h
crypto/test/: CMakeLists.txt  test.cpp
include/crypto/: AEAD.h  ChaCha20Poly1305.h  GCM.h  crypto.h
include/crypto/aead/: AEAD.h
include/crypto/codec/: base64.h  codec.h
include/crypto/md/: SHA256.h
include/sqlitepp/: SQLiteConnector.h  SQLiteException.h  sqlitepp.h
scripts/: deploy.sh  undeploy.sh  update_chn_acl_list.sh
scripts/ss-local/: deploy.sh  undeploy.sh
scripts/ss-remote/: deploy.sh  undeploy.sh
sql/: test.db
src/: ACL.cpp  ACL.h  AccessControlList.cpp  AccessControlList.h  AsyncObject.h  CMakeLists.txt  Connection.cpp  Connection.h  EncryptedConnection.cpp  EncryptedConnection.h  IPSet.cpp  IPSet.h  Recorder.cpp  Recorder.h  ReplayProtection.cpp  ReplayProtection.h  SQLiteTrafficRecorder.cpp  SQLiteTrafficRecorder.h  SQLiteTrafficRecorderHelper.h  SSURL.cpp  SSURL.h  SqliteTrafficRecorder.cpp  SqliteTrafficRecorder.h  SqliteTrafficRecorderHelper.cpp  SqliteTrafficRecorderHelper.h  TrafficRecorder.cpp  TrafficRecorder.h  access_control_list.cpp  access_control_list.h  awaitable.h  config.cpp  config.h  connection.cpp  connection.h  convert.cpp  convert.h  encrypted_connection.cpp  encrypted_connection.h  io.h  ip_set.cpp  (+14 more)
src/crypto/: AEAD.cpp  CMakeLists.txt  crypto.cpp
src/crypto/aead/: AEAD.cpp
src/crypto/codec/: base64.cpp  codec.cpp
src/crypto/md/: SHA256.cpp
src/sqlitepp/: CMakeLists.txt  SQLiteConnector.cpp  SQLiteException.cpp  sqlitepp.cpp
test/: CMakeLists.txt  test.cpp  test_crypto.cpp  test_ip_set.cpp  test_rule_set.cpp  test_sqlitepp.cpp  test_ssurl.cpp
